--- a/serverless.yml
+++ b/serverless.yml
@@ -22,7 +22,7 @@ frameworkVersion: "3"
 
 provider:
   name: aws
-  runtime: nodejs12.x
+  runtime: nodejs14.x
   lambdaHashingVersion: 20201221
 
 # you can overwrite defaults here
@@ -91,7 +91,7 @@ provider:
 
 functions:
   websocketHandler:
-    handler: src/handler.handle
+    handler: src/handlers.handle
     events:
       - websocket:
           route: $connect
