--- a/serverless.yml
+++ b/serverless.yml
@@ -1,34 +1,10 @@
-# Welcome to Serverless!
-#
-# This file is the main config file for your service.
-# It's very minimal at this point and uses default values.
-# You can always add more config options for more control.
-# We've included some commented out config examples here.
-# Just uncomment any of them to get that config option.
-#
-# For full config options, check the docs:
-#    docs.serverless.com
-#
-# Happy Coding!
-
 service: serverless-chat
-# app and org for use with dashboard.serverless.com
-#app: your-app-name
-#org: your-org-name
-
-# You can pin your service to only deploy with a specific Serverless version
-# Check out our docs for more details
-frameworkVersion: "3"
-
+package:
+  individually: true
 provider:
   name: aws
-  runtime: nodejs14.x
-  lambdaHashingVersion: 20201221
-
-# you can overwrite defaults here
-#  stage: dev
+  runtime: nodejs20.x
   region: ap-southeast-1
-
   environment:
     WSSAPIGATEWAYENDPOINT:
       Fn::Join:
@@ -37,8 +13,6 @@ provider:
           - ".execute-api."
           - Ref: AWS::Region
           - ".amazonaws.com/${sls:stage}"
-
-# you can add statements to the Lambda function's IAM Role here
   iam:
     role:
       statements:
@@ -77,18 +51,6 @@ provider:
                 - "index"
                 - "*"
 
-# you can define service wide environment variables here
-#  environment:
-#    variable1: value1
-
-# you can add packaging information here
-#package:
-#  patterns:
-#    - '!exclude-me.js'
-#    - '!exclude-me-dir/**'
-#    - include-me.js
-#    - include-me-dir/**
-
 functions:
   websocketHandler:
     handler: src/handlers.handle
@@ -103,10 +65,6 @@ functions:
           route: sendMessage
       - websocket:
           route: getClients
-
-#    Define function environment variables here
-#    environment:
-#      variable2: value2
 
 plugins:
   - serverless-plugin-typescript
