--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "aws-lambda": "^1.0.7"
+    "aws-lambda": "^1.0.7",
+    "uuid": "^10.0.0"
   }
 }
