--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.102",
     "@types/node": "^18.7.13",
+    "@types/uuid": "^10.0.0",
     "prettier": "^2.7.1",
     "serverless": "^3.22.0",
     "serverless-plugin-typescript": "^2.1.2",
