--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,17 @@
 {
-  "semi": true,
-  "trailingComma": "all",
-  "singleQuote": false,
-  "printWidth": 120,
-  "tabWidth": 2
+    "tabWidth": 4,
+    "useTabs": false,
+    "printWidth": 120,
+    "semi": true,
+    "singleQuote": true,
+    "quoteProps": "consistent",
+    "trailingComma": "es5",
+    "bracketSpacing": true,
+    "bracketSameLine": true,
+    "arrowParens": "avoid",
+    "endOfLine": "lf",
+    "embeddedLanguageFormatting": "auto",
+    "organizeImportsSkipDestructiveCodeActions": true,
+    "plugins": ["prettier-plugin-organize-imports"],
+    "pluginSearchDirs": false
 }
