feat: Add linting script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "deploy": "serverless deploy"
+        "deploy": "serverless deploy",
+        "lint": "npx prettier . --write"
     },
     "author": "",
     "license": "ISC",
