feat: Allow multiple connections for a user

--- a/serverless.yml
+++ b/serverless.yml
@@ -53,7 +53,7 @@ provider:
 
 functions:
     websocketHandler:
-        handler: src/handlers.handle
+        handler: src/websocket.handle
         events:
             - websocket:
                   route: $connect
