--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest",
         "deploy": "serverless deploy",
         "lint": "npx prettier . --write"
     },
@@ -12,11 +12,14 @@
     "license": "ISC",
     "devDependencies": {
         "@types/aws-lambda": "^8.10.102",
+        "@types/jest": "^29.5.12",
         "@types/node": "^18.7.13",
+        "jest": "^29.7.0",
         "prettier": "2.8.8",
         "prettier-plugin-organize-imports": "^4.0.0",
         "serverless": "3.22.0",
         "serverless-plugin-typescript": "2.1.2",
+        "ts-jest": "^29.2.5",
         "typescript": "^4.7.4"
     },
     "dependencies": {
